
-- 1. App user (identified by plugin-generated UUID)
CREATE TABLE app_user (
    id              UUID PRIMARY KEY,       -- generated by browser plugin on first install
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- 2. Browse session (one per plugin activation)
CREATE TABLE browse_session (
    id              UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    user_id         UUID         NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    user_agent      TEXT,                   -- from json: user_agent
    started_at      TIMESTAMPTZ  NOT NULL DEFAULT now(),
    ended_at        TIMESTAMPTZ
);

CREATE INDEX idx_session_user ON browse_session(user_id);

-- 3. Twitter author
--    All fields mapped from: data.core.user_results.result
CREATE TABLE twitter_author (
    twitter_id          BIGINT PRIMARY KEY,           -- rest_id
    screen_name         VARCHAR(50)  NOT NULL,        -- core.screen_name
    display_name        VARCHAR(100) NOT NULL,        -- core.name
    bio                 TEXT,                          -- legacy.description
    avatar_url          TEXT,                          -- avatar.image_url
    profile_banner_url  TEXT,                          -- legacy.profile_banner_url (nullable)
    location            TEXT,                          -- location.location
    followers_count     INT NOT NULL DEFAULT 0,       -- legacy.followers_count
    following_count     INT NOT NULL DEFAULT 0,       -- legacy.friends_count
    statuses_count      INT NOT NULL DEFAULT 0,       -- legacy.statuses_count
    media_count         INT NOT NULL DEFAULT 0,       -- legacy.media_count
    favourites_count    INT NOT NULL DEFAULT 0,       -- legacy.favourites_count
    listed_count        INT NOT NULL DEFAULT 0,       -- legacy.listed_count
    is_blue_verified    BOOLEAN NOT NULL DEFAULT FALSE,-- is_blue_verified
    is_protected        BOOLEAN NOT NULL DEFAULT FALSE,-- privacy.protected
    profile_image_shape VARCHAR(20),                  -- profile_image_shape ("Circle"/"Square")
    verified_type       VARCHAR(20),                  -- verification.verified_type (nullable, e.g. "Business")
    account_created_at  TIMESTAMPTZ,                  -- core.created_at
    first_seen_at       TIMESTAMPTZ NOT NULL DEFAULT now(),
    last_updated_at     TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_author_screen_name ON twitter_author(screen_name);

-- 4. Tweet (both original tweets and replies)
--    All fields mapped from: data.legacy + data top-level
CREATE TABLE tweet (
    twitter_id          BIGINT PRIMARY KEY,           -- legacy.id_str / rest_id
    author_twitter_id   BIGINT       NOT NULL REFERENCES twitter_author(twitter_id),
    conversation_id     BIGINT,                       -- legacy.conversation_id_str
    in_reply_to_tweet_id BIGINT,                                    -- legacy.in_reply_to_status_id_str (no FK: parent may not be captured)
    in_reply_to_user_id BIGINT,                       -- legacy.in_reply_to_user_id_str
    full_text           TEXT         NOT NULL,         -- legacy.full_text
    lang                VARCHAR(10),                  -- legacy.lang
    source_app          TEXT,                          -- source (HTML tag)
    favorite_count      INT NOT NULL DEFAULT 0,       -- legacy.favorite_count
    retweet_count       INT NOT NULL DEFAULT 0,       -- legacy.retweet_count
    reply_count         INT NOT NULL DEFAULT 0,       -- legacy.reply_count
    quote_count         INT NOT NULL DEFAULT 0,       -- legacy.quote_count
    bookmark_count      INT NOT NULL DEFAULT 0,       -- legacy.bookmark_count
    view_count          BIGINT NOT NULL DEFAULT 0,     -- views.count (BIGINT: viral tweets exceed INT max)
    is_quote_status     BOOLEAN NOT NULL DEFAULT FALSE,-- legacy.is_quote_status
    quoted_tweet_id     BIGINT,                        -- quoted tweet id (no FK: may not be captured)
    is_retweet          BOOLEAN NOT NULL DEFAULT FALSE,-- whether this is a retweet
    retweeted_tweet_id  BIGINT,                        -- original tweet id if is_retweet (no FK: may not be captured)
    possibly_sensitive  BOOLEAN NOT NULL DEFAULT FALSE,-- legacy.possibly_sensitive
    is_translatable     BOOLEAN NOT NULL DEFAULT FALSE,-- is_translatable
    promoted            BOOLEAN NOT NULL DEFAULT FALSE,-- promoted (top-level)
    tweet_created_at    TIMESTAMPTZ  NOT NULL,         -- legacy.created_at
    first_seen_at       TIMESTAMPTZ NOT NULL DEFAULT now(),
    last_updated_at     TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_tweet_author        ON tweet(author_twitter_id);
CREATE INDEX idx_tweet_conversation  ON tweet(conversation_id);
CREATE INDEX idx_tweet_reply_to      ON tweet(in_reply_to_tweet_id);
CREATE INDEX idx_tweet_created       ON tweet(tweet_created_at);
CREATE INDEX idx_tweet_promoted      ON tweet(promoted) WHERE promoted = TRUE;

-- 5. Tweet media (photos, videos, GIFs)
--    Mapped from: data.legacy.extended_entities.media[]
CREATE TABLE tweet_media (
    id                  UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    tweet_twitter_id    BIGINT  NOT NULL REFERENCES tweet(twitter_id) ON DELETE CASCADE,
    media_key           TEXT    NOT NULL UNIQUE,       -- media_key (e.g. "3_xxx" photo, "7_xxx" video, "13_xxx" amplify)
    type                VARCHAR(20) NOT NULL,          -- "photo" / "video" / "animated_gif"
    media_url           TEXT    NOT NULL,              -- media_url_https (image or video thumbnail)
    width               INT,                           -- original_info.width
    height              INT,                           -- original_info.height
    display_url         TEXT,                          -- display_url
    expanded_url        TEXT,                          -- expanded_url
    duration_ms         INT,                           -- video_info.duration_millis (NULL for photos)
    video_variants      JSONB,                         -- video_info.variants (array of bitrate/url, NULL for photos)
    created_at          TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_media_tweet ON tweet_media(tweet_twitter_id);

-- 6. Viewed tweet (bridge: which user saw which tweet in which session)
--    Outer JSON fields (plugin metadata)
CREATE TABLE viewed_tweet (
    id                  UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    user_id             UUID   NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    session_id          UUID   NOT NULL REFERENCES browse_session(id) ON DELETE CASCADE,
    tweet_twitter_id    BIGINT NOT NULL REFERENCES tweet(twitter_id),
    nav_index           VARCHAR(50),                  -- nav_index
    source_platform     VARCHAR(50),                  -- source_platform
    source_platform_url TEXT,                          -- source_platform_url (e.g. "https://x.com/home" or tweet detail URL)
    viewed_at           TIMESTAMPTZ NOT NULL DEFAULT now()  -- from timestamp_collected
);

CREATE INDEX idx_viewed_user    ON viewed_tweet(user_id);
CREATE INDEX idx_viewed_session ON viewed_tweet(session_id);
CREATE INDEX idx_viewed_tweet   ON viewed_tweet(tweet_twitter_id);
CREATE INDEX idx_viewed_at      ON viewed_tweet(viewed_at);

-- 7. Sentiment analysis result
CREATE TABLE sentiment_result (
    id                  UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    tweet_twitter_id    BIGINT NOT NULL REFERENCES tweet(twitter_id),
    sentiment           VARCHAR(20) NOT NULL,          -- e.g. "positive" / "negative" / "neutral"
    topic               TEXT,                          -- e.g. "politics", "sports" (NULL if not categorized)
    confidence          REAL,
    detail              JSONB,                         -- flexible: sub-emotions, scores, model info
    analyzed_at         TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_sentiment_tweet ON sentiment_result(tweet_twitter_id);
CREATE INDEX idx_sentiment_type  ON sentiment_result(sentiment);