// This is the file format to be uploaded to https://dbdiagram.io/d to generate a E-R graph.


// 1. App user (identified by plugin-generated UUID)
Table app_user {
  id         uuid      [pk, note: "generated by browser plugin on first install"]
  created_at timestamptz [not null, default: `now()`]
}

// 2. Browse session (one per plugin activation)
Table browse_session {
  id         uuid        [pk, default: `gen_random_uuid()`]
  user_id    uuid        [not null, ref: > app_user.id]
  user_agent text
  started_at timestamptz [not null, default: `now()`]
  ended_at   timestamptz

  indexes {
    user_id [name: "idx_session_user"]
  }
}

// 3. Twitter author
//    All fields mapped from: data.core.user_results.result
Table twitter_author {
  twitter_id          bigint      [pk, note: "rest_id"]
  screen_name         varchar(50) [not null, note: "core.screen_name"]
  display_name        varchar(100) [not null, note: "core.name"]
  bio                 text        [note: "legacy.description"]
  avatar_url          text        [note: "avatar.image_url"]
  profile_banner_url  text        [note: "legacy.profile_banner_url"]
  location            text        [note: "location.location"]
  followers_count     int         [not null, default: 0, note: "legacy.followers_count"]
  following_count     int         [not null, default: 0, note: "legacy.friends_count"]
  statuses_count      int         [not null, default: 0, note: "legacy.statuses_count"]
  media_count         int         [not null, default: 0, note: "legacy.media_count"]
  favourites_count    int         [not null, default: 0, note: "legacy.favourites_count"]
  listed_count        int         [not null, default: 0, note: "legacy.listed_count"]
  is_blue_verified    boolean     [not null, default: false, note: "is_blue_verified"]
  is_protected        boolean     [not null, default: false, note: "privacy.protected"]
  profile_image_shape varchar(20) [note: '"Circle" or "Square"']
  verified_type       varchar(20) [note: 'verification.verified_type, e.g. "Business"']
  account_created_at  timestamptz [note: "core.created_at"]
  first_seen_at       timestamptz [not null, default: `now()`]
  last_updated_at     timestamptz [not null, default: `now()`]

  indexes {
    screen_name [name: "idx_author_screen_name"]
  }
}

// 4. Tweet (both original tweets and replies)
//    All fields mapped from: data.legacy + data top-level
Table tweet {
  twitter_id           bigint      [pk, note: "legacy.id_str / rest_id"]
  author_twitter_id    bigint      [not null, ref: > twitter_author.twitter_id]
  conversation_id      bigint      [note: "legacy.conversation_id_str"]
  in_reply_to_tweet_id bigint      [note: "legacy.in_reply_to_status_id_str — no FK, parent may not be captured"]
  in_reply_to_user_id  bigint      [note: "legacy.in_reply_to_user_id_str"]
  full_text            text        [not null, note: "legacy.full_text"]
  lang                 varchar(10) [note: "legacy.lang"]
  source_app           text        [note: "source (HTML tag)"]
  favorite_count       int         [not null, default: 0, note: "legacy.favorite_count"]
  retweet_count        int         [not null, default: 0, note: "legacy.retweet_count"]
  reply_count          int         [not null, default: 0, note: "legacy.reply_count"]
  quote_count          int         [not null, default: 0, note: "legacy.quote_count"]
  bookmark_count       int         [not null, default: 0, note: "legacy.bookmark_count"]
  view_count           bigint      [not null, default: 0, note: "views.count — bigint, viral tweets exceed INT max"]
  is_quote_status      boolean     [not null, default: false, note: "legacy.is_quote_status"]
  quoted_tweet_id      bigint      [note: "quoted tweet id — no FK, may not be captured"]
  is_retweet           boolean     [not null, default: false, note: "whether this is a retweet"]
  retweeted_tweet_id   bigint      [note: "original tweet id if is_retweet — no FK, may not be captured"]
  possibly_sensitive   boolean     [not null, default: false, note: "legacy.possibly_sensitive"]
  is_translatable      boolean     [not null, default: false, note: "is_translatable"]
  promoted             boolean     [not null, default: false, note: "promoted (top-level)"]
  tweet_created_at     timestamptz [not null, note: "legacy.created_at"]
  first_seen_at        timestamptz [not null, default: `now()`]
  last_updated_at      timestamptz [not null, default: `now()`]

  indexes {
    author_twitter_id   [name: "idx_tweet_author"]
    conversation_id     [name: "idx_tweet_conversation"]
    in_reply_to_tweet_id [name: "idx_tweet_reply_to"]
    tweet_created_at    [name: "idx_tweet_created"]
    promoted            [name: "idx_tweet_promoted"]
  }
}

// 5. Tweet media (photos, videos, GIFs)
//    Mapped from: data.legacy.extended_entities.media[]
Table tweet_media {
  id               uuid        [pk, default: `gen_random_uuid()`]
  tweet_twitter_id bigint      [not null, ref: > tweet.twitter_id]
  media_key        text        [not null, unique, note: 'e.g. "3_xxx" photo, "7_xxx" video, "13_xxx" amplify']
  type             varchar(20) [not null, note: '"photo" / "video" / "animated_gif"']
  media_url        text        [not null, note: "media_url_https (image or video thumbnail)"]
  width            int         [note: "original_info.width"]
  height           int         [note: "original_info.height"]
  display_url      text        [note: "display_url"]
  expanded_url     text        [note: "expanded_url"]
  duration_ms      int         [note: "video_info.duration_millis — NULL for photos"]
  video_variants   jsonb       [note: "video_info.variants — NULL for photos"]
  created_at       timestamptz [not null, default: `now()`]

  indexes {
    tweet_twitter_id [name: "idx_media_tweet"]
  }
}

// 6. Viewed tweet (bridge: which user saw which tweet in which session)
Table viewed_tweet {
  id                  uuid        [pk, default: `gen_random_uuid()`]
  user_id             uuid        [not null, ref: > app_user.id]
  session_id          uuid        [not null, ref: > browse_session.id]
  tweet_twitter_id    bigint      [not null, ref: > tweet.twitter_id]
  nav_index           varchar(50) [note: "nav_index"]
  source_platform     varchar(50) [note: "source_platform"]
  source_platform_url text        [note: 'e.g. "https://x.com/home" or tweet detail URL']
  viewed_at           timestamptz [not null, default: `now()`, note: "from timestamp_collected"]

  indexes {
    user_id          [name: "idx_viewed_user"]
    session_id       [name: "idx_viewed_session"]
    tweet_twitter_id [name: "idx_viewed_tweet"]
    viewed_at        [name: "idx_viewed_at"]
  }
}

// 7. Sentiment analysis result
Table sentiment_result {
  id               uuid        [pk, default: `gen_random_uuid()`]
  tweet_twitter_id bigint      [not null, ref: > tweet.twitter_id]
  sentiment        varchar(20) [not null, note: '"positive" / "negative" / "neutral"']
  topic            text        [note: 'e.g. "politics", "sports" — NULL if not categorized']
  confidence       real
  detail           jsonb       [note: "flexible: sub-emotions, scores, model info"]
  analyzed_at      timestamptz [not null, default: `now()`]

  indexes {
    tweet_twitter_id [name: "idx_sentiment_tweet"]
    sentiment        [name: "idx_sentiment_type"]
  }
}